# advent-of-code

./: .gitignore  README.md
2024/: .gitignore
2024/day01/: README.md  day01.cpp  makefile
2024/day02/: CMakeLists.txt  README.md  buildme.sh  day02.cpp
2024/day02/src/: CMakeLists.txt  funs.cpp  funs.h  main.cpp
2024/day02/tests/: CMakeLists.txt  test_funs.cpp
2024/day03/: CMakeLists.txt  README.md  buildme.sh
2024/day03/src/: day03.cpp
2024/day04/: CMakeLists.txt  README.md  buildme.sh
2024/day04/src/: day04.cpp
2024/day05/: CMakeLists.txt  README.md  buildme.sh
2024/day05/src/: day05.cpp  suppport.hpp
2024/day05/tests/: test_support.cpp
2024/day06/: CMakeLists.txt  README.md  buildme.sh
2024/day06/src/: day06.cpp
2024/day07/: CMakeLists.txt  buildme.sh
2024/day07/src/: day07.cpp
2024/day08/: CMakeLists.txt  buildme.sh
2024/day08/src/: day08.cpp
2024/day09/: CMakeLists.txt  buildme.sh
2024/day09/src/: day09.cpp  support.hpp
2024/day09/tests/: test_support.cpp
2024/day10/: CMakeLists.txt  buildme.sh
2024/day10/src/: day10.cpp
2024/day11/: CMakeLists.txt
2024/day11/src/: day11.cpp
2024/day12/: CMakeLists.txt  buildme.sh
2024/day12/src/: day12.cpp
2025/: .gitignore
2025/day01/: CMakeLists.txt  main.cpp  runme.sh
2025/day02/: CMakeLists.txt  makefile
2025/day02/src/: day02.cpp  day02funs.hpp
2025/day02/tests/: CMakeLists.txt  test_day02.cpp
2025/day03/: CMakeLists.txt  makefile
2025/day03/src/: day03.cpp  day03funs.hpp
2025/day03/tests/: CMakeLists.txt  test_day03.cpp
2025/templates/stdday/: cookiecutter.json
2025/templates/stdday/day{{cookiecutter.day}}/: CMakeLists.txt  makefile
2025/templates/stdday/day{{cookiecutter.day}}/src/: day{{cookiecutter.day}}.cpp
2025/templates/stdday/day{{cookiecutter.day}}/tests/: CMakeLists.txt  test_day{{cookiecutter.day}}.cpp
